# Ifc-Mcp

./: .gitignore  README.md  ifc_manager.py  pyproject.toml  server.py
.claude/: settings.json
.github/workflows/: publish.yml
docs/superpowers/plans/: 2026-06-16-ifc-mcp.md
docs/superpowers/specs/: 2026-06-16-ifc-mcp-design.md
resources/: model_summary.py
tests/: conftest.py  create_fixture.py  test_ifc_manager.py  test_server.py
tests/fixtures/: sample.ifc
tests/resources/: test_model_summary.py
tests/tools/: test_element_tools.py  test_file_tools.py  test_geometry_tools.py  test_property_tools.py  test_spatial_tools.py
tools/: element_tools.py  file_tools.py  geometry_tools.py  property_tools.py  spatial_tools.py
