[project]
name = "ifc-mcp"
version = "0.1.0"
description = "MCP server for AI agents to understand IFC building model files"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Thanh Phan", email = "phan.thanh@bimlogiq.com" }]
keywords = ["mcp", "ifc", "bim", "ifcopenshell", "building", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "ifcopenshell",
]

[project.urls]
Repository = "https://github.com/bimlogiq/ifc-mcp"

[project.scripts]
ifc-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
